--- a/travel/tokyo2023.html
+++ b/travel/tokyo2023.html
@@ -51,6 +51,12 @@
         <label for="Day1"><h2>Day1 6/25 (日) 起程</h2></label>
         <input type="radio" name="day" id="Day1">
         <div class="itinerary">
+          <p>
+            第一班抵達後找地方寄放行李，去酒酒井逛街吃午餐，回來接到阿嬤他們之後前往住處。
+            將東西略作整理之後出發去shibuya sky看日落，晚餐預定吃一蘭。
+            吃飽後可以順道逛逛街，結束第一篇的行程～<br>
+            p.s.記得買牛奶、優格等每天都想吃的東西！（如果吃完晚餐超市還有開的話）
+          </p>
           <h3>去程</h3>
           <div class="flight">
             <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
@@ -61,6 +67,7 @@
           <h4>千葉酒酒井Outlet</h4>
             <p>營業時間：早上10點開門，<a href="https://www.bobblog.tw/shisui-premium-outlets-transport/">交通方式圖解</a></p>
             <ul>
+              <li><a href="https://goo.gl/maps/8LZ83K3B1Lj92GBQA">地圖</a></li>
               <li>機場巴士車程20分鐘，票價500日圓。<br>
                   第一航廈1樓搭車處：30號站牌<br>
                   第二航廈1樓搭車處：28號站牌<br>
@@ -79,41 +86,41 @@
             <p>接到後直接前往搭乘<strong>京成成田SKYACCESS ACCESS特急（往京成上野）</strong><br>
                <a href="https://www.funliday.com/posts/narita-airport-tokyo-keisei-access-express/">搭車教學</a><br>
                <u>14:04</u>與<u>14:44</u>各有一班，預計分別於<u>14:38</u>與<u>15:18</u>抵達東松戶站<br>
-               票價953日圓，直達車無須轉車（要轉車的反而都比較貴，查app的）</p>
+               票價953日圓，可以現場買票，直達車無須轉車（要轉車的反而都比較貴，查app的）</p>
           </div>
           <br>
           <img src="../images/home-64px.png" class="icon" alt="home" width="64px">
           <h3>這幾天的家：ReLa Higashi Matsudo</h3>
             <table>
               <tr><td>
-                <span lang="jp">〒270-2225 千葉県松戸市東松戸１丁目３−2</span>&ensp;
-                <a href="https://goo.gl/maps/9rd9KkithYw98Kgr7">地圖</a>
+                東松戶站&ensp;<a href="https://goo.gl/maps/9rd9KkithYw98Kgr7">地圖</a>
               </td></tr>
-              <tr><td>東松戶站</td></tr>
+              <tr><td>有電梯，距離捷運站走路3分鐘</td></tr>
             </table>
           <br>
           <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
           <h3>Shibuya Sky</h3>
             <table>
               <tr><td>
-                <span lang="jp">〒150-6145 東京都渋谷区渋谷２丁目２４−12, Shibuya Scramble Square, 14階・45階・46階・屋上</span>&ensp;
-                <a href="https://goo.gl/maps/w9HEo9ASM6e7BBqJA">地圖</a>
+                澀谷站&ensp;<a href="https://goo.gl/maps/w9HEo9ASM6e7BBqJA">地圖</a>
               </td></tr>
-              <tr><td><span lang="jp">渋谷駅</span>，從東松戶出發大概要花1個小時=大約下午4點要從住處出發</td></tr>
+              <tr><td>14/45/46樓</td></tr>
             </table>
             <div class="indent">
-              <p>門票入場時間：17:20<br>
-                 當天日落時間 <span class="time">19:00</span></p>
+              <p>
+                從東松戶出發大概要花1個小時=大約<strong>下午4點</strong>要從住處出發<br>
+                門票入場時間&ensp;<span class="time">17:20</span><br>
+                當天日落時間&ensp;19:00
+              </p>
             </div>
           <br>
           <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
           <h3>晚餐：一蘭 澀谷西班牙坂店（<span lang="jp">渋谷スペイン坂店</span>）</h3>
             <table>
               <tr><td>
-                <span lang="jp">〒150-0042 東京都渋谷区宇田川町１３−7 コヤスワン B1F</span>&ensp;
-                <a href="https://goo.gl/maps/duYA29M6VERGosWS9">地圖</a>
+                <span lang="jp">コヤスワン B1F</span>&ensp;<a href="https://goo.gl/maps/duYA29M6VERGosWS9">地圖</a>
               </td></tr>
-              <tr><td>走路去</td></tr>
+              <tr><td>距離shibuya sky最近的一蘭，走路7分鐘</td></tr>
             </table>
         </div>
       </section>
@@ -122,30 +129,44 @@
         <label for="Day2"><h2>Day2 6/26 (一) 原宿</h2></label>
         <input type="radio" name="day" id="Day2">
         <div class="itinerary">
+          <p>
+            吃個早午餐之後去原宿逛街。（也可以早餐隨便吃吃，中午去排Afuri吃柚子鹽拉麵）可以去附近明治神宮晃晃。晚餐新宿站六歌仙燒肉吃到飽。
+          </p>
           <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
           <h3>早午餐：bills Futako-Tamagawa</h3>
             <table>
               <tr><td>
-                <span lang="jp">〒158-0094 東京都世田谷区玉川２丁目２７−5 高島屋S・Cマロニエコート 3F</span>&ensp;
-                <a href="https://goo.gl/maps/zAkFivzp4X5pYXRj8">地圖</a>
+                二子玉川站&ensp;<a href="https://goo.gl/maps/zAkFivzp4X5pYXRj8">地圖</a>
               </td></tr>
-              <tr><td>二子玉川站</td></tr>
+              <tr><td><span lang="jp">高島屋S・Cマロニエコート 3F</span></td></tr>
             </table>
+            <div class="indent">
+              <p>
+                有點遠，覺得近一點的點會比較好。
+              </p>
+            </div>
           <br>
-          <h3>竹下通逛街</h3>
+          <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+          <h3>竹下通、表參道逛街</h3>
+            <table>
+              <tr><td>原宿站</td></tr>
+              <tr><td>竹下通較靠近捷運站，表參道要再走一段路</td></tr>
+            </table>
           <br>
           <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
           <h3>晚餐：燒肉亭 六歌仙 新宿西口1號店</h3>
             <table>
               <tr><td>
-                <span lang="jp">〒160-0023 東京都新宿区西新宿１丁目３−1 新宿サンフラワービル 6F/7F</span>&ensp;
-                <a href="https://goo.gl/maps/HLDSE1AiNtwM3d736">地圖</a>
+                新宿西口站&ensp;<a href="https://goo.gl/maps/HLDSE1AiNtwM3d736">地圖</a>
               </td></tr>
-              <tr><td>新宿西口站</td></tr>
+              <tr><td><span lang="jp">新宿サンフラワービル 6F/7F</span></td></tr>
             </table>
             <div class="indent">
-              <p>訂位時間：<span class="time">18:00</span><br>
-                 月之宴，用餐時間90分鐘</p>
+              <p>
+                原宿站至此站需12分鐘，從捷運站走過去需2分鐘<br>
+                訂位時間：<span class="time">18:00</span><br>
+                月之宴，用餐時間90分鐘
+              </p>
             </div>
         </div>
       </section>
@@ -154,26 +175,38 @@
         <label for="Day3"><h2>Day3 6/27 (二) 澀谷</h2></label>
         <input type="radio" name="day" id="Day3">
         <div class="itinerary">
+          <p>
+            今天吃飯都在澀谷車站附近，可以在附近晃晃
+          </p>
           <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
           <h3>午餐：<span lang="jp">挽肉と米 渋谷店</span></h3>
             <table>
               <tr><td>
-                <span lang="jp">〒150-0043 東京都渋谷区道玄坂２丁目２８−1 椎津ビル ３F</span>&ensp;
-                <a href="https://goo.gl/maps/uQ9Yz1tpPzBuCpyh8">地圖</a>
+                澀谷站&ensp;<a href="https://goo.gl/maps/uQ9Yz1tpPzBuCpyh8">地圖</a>
               </td></tr>
-              <tr><td>澀谷站</td></tr>
+              <tr><td><span lang="jp">椎津ビル ３F</span></td></tr>
             </table>
             <div class="indent">
-              <p>早上<span class="time">08:00</span>到，排隊領整理券</p>
+              <p>早上<span class="time">08:00</span>開始發放整理券</p>
+            </div>
+          <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
+          <h3>中目黑星巴克</h3>
+            <table>
+              <tr><td>
+                中目黑站&ensp;<a href="https://goo.gl/maps/8ZeEysXZMhZCpjbVA">地圖</a>
+              </td></tr>
+              <tr><td>澀谷站至此站約3分鐘</td></tr>
+            </table>
+            <div class="indent">
+              <p>日本最大間星巴克，從捷運站步行約15分鐘。共四層樓。</p>
             </div>
           <img src="../images/pin-64px.png" class="icon" alt="address" width="64px">
           <h3>晚餐：<span lang="jp">梅丘 寿司の美登利 渋谷店</span></h3>
             <table>
               <tr><td>
-                <span lang="jp">〒150-0043 東京都渋谷区道玄坂１丁目１２−3 マークシティイースト ４Ｆ</span>&ensp;
-                <a href="https://goo.gl/maps/8ZeEysXZMhZCpjbVA">地圖</a>
+                澀谷站&ensp;<a href="https://goo.gl/maps/8ZeEysXZMhZCpjbVA">地圖</a>
               </td></tr>
-              <tr><td>澀谷站</td></tr>
+              <tr><td><span lang="jp">マークシティイースト ４Ｆ</span></td></tr>
             </table>
             <div class="indent">
               <p>現場候位，要早點去那邊登記</p>
@@ -189,10 +222,9 @@
           <h3>迪士尼樂園</h3>
             <table>
               <tr><td>
-                <span lang="jp">〒279-0031 千葉県浦安市舞浜1-1</span>&ensp;
-                <a href="https://goo.gl/maps/iggPUejiSsd7vDCbA">地圖</a>
+                舞濱站&ensp;<a href="https://goo.gl/maps/iggPUejiSsd7vDCbA">地圖</a>
               </td></tr>
-              <tr><td>舞濱站</td></tr>
+              <tr><td>搭車大約30分鐘</td></tr>
             </table>
             <div class="indent">
               <p>表定時間8:00開始營業，建議早到。22:00關門<br>
@@ -202,22 +234,22 @@
       </section>
 
       <section><!--Day5-->
-        <label for="Day5"><h2>Day5 6/29 (四)</h2></label>
+        <label for="Day5"><h2>Day5 6/29 (四)富士山</h2></label>
         <input type="radio" name="day" id="Day5">
         <div class="itinerary">
-          <h3>早餐</h3>
-          <h3>午餐</h3>
-          <h3>晚餐</h3>
+          <h3>富士急樂園</h3>
+          <h3>河口湖看富士山</h3>
+          <h3>忍野八海</h3>
+          <h3>風穴、冰穴??</h3>
         </div>
       </section>
 
       <section><!--Day6-->
-        <label for="Day6"><h2>Day6 6/30 (五) 築地 + 台場</h2></label>
+        <label for="Day6"><h2>Day6 6/30 (五) 築地市場 + 台場</h2></label>
         <input type="radio" name="day" id="Day6">
         <div class="itinerary">
-          <h3>築地市場</h3>
-          <h3>午餐</h3>
-          <h3>晚餐</h3>
+          <h3>築地場外市場</h3>
+          <h3>台場</h3>
         </div>
       </section>
 
@@ -304,6 +336,8 @@
               <tr><td>東京車站 銀座</td></tr>
               <tr><td>營業時間:08:00-21:00</td></tr>
             </table>
+          <h3>Calbee+薯條店</h3>
+          <li>東京車站布丁</li>
           <h3>回程</h3>
           <div class="flight">
             <h4>三姊妹航班 日本捷星航空(jetstar)</h4>
@@ -321,22 +355,13 @@
         <li>Burger prince</li>
         <li>Shake shack</li>
         <li>Shogun burger</li>
-        <li>富士山腳下</li>
         <li>根室花丸</li>
-        <li>原宿一日遊</li>
         <ul>
-          <li>表參道</li>
           <li>明智神宮</li>
           <li>Afuri原宿</li>
         </ul>
-        <li>築地市場</li>
-        <ul>
-          <li>Calbee+薯條店</li>
-          <li>東京車站布丁</li>
-        </ul>
-        <li>網卡</li>
         <li>快速通關</li>
-        <li>交通卡</li>
+        <li>suica卡、東京周遊券</li>
       </ul>
     </article>
   </body>
